# anonymacy

./: LICENSE  README.md  pyproject.toml
anonymacy/: __init__.py  anonymizer.py  conflict_resolver.py  context_enhancer.py  pattern_recognizer.py  pipeline.py  pyproject.toml
notebooks/: anonymacy_demo.py  maskpipe_demo.py  structured_demo.py
src/: using_test.py
src/anonymacy/: __init__.py  anonymizer.py  conflict_resolver.py  context_enhancer.py  doc_builder.py  pipeline.py  pipeline_builder.py  recognizer.py  span_filter.py  util.py  validator.py
src/anonymacy/entities/: __init__.py  credit_card.py  date.py  date_of_birth.py  datetime.py  email.py  entity.py  iban.py  ip_address.py  mac_address.py  number.py  phone_number.py  url.py
src/anonymacy/entities/nl/: __init__.py  bsn.py  phone_number.py
src/anonymacy/recognizer/: __init__.py  base_recognizer.py  bsn_recognizer.py  pattern_recognizer.py  phone_recognizer.py
src/maskpipe/: __init__.py  anonymizer.py  conflict_resolver.py  context_enhancer.py  doc_builder.py  entity_mapper.py  pipeline_builder.py  recognizer.py  span_filter.py  structured_analyzer.py  util.py
src/maskpipe/entities/: __init__.py  credit_card.py  date.py  email.py  entity.py  iban.py  ip_address.py  mac_address.py  number.py  phone_number.py  url.py
src/maskpipe/entities/nl/: bsn.py
tests/anonymacy/: test_anonymizer.py  test_context_enhancer.py  test_recognizer.py
tests/maskpipe/: test_anonymizer.py  test_context_enhancer.py
