[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anonymacy"
version = "0.0.10"
requires-python = ">=3.11,<3.15"
dependencies = [
    "spacy>=3.8.7",
    "phonenumbers",
    "schwifty"
]

[tool.hatch.build.targets.wheel]
packages = ["src/anonymacy"]

[project.entry-points.spacy_factories]
recognizer = "anonymacy.recognizer:Recognizer"
context_enhancer = "anonymacy.context_enhancer:ContextEnhancer"
conflict_resolver = "anonymacy.conflict_resolver:ConflictResolver"
anonymizer = "anonymacy.anonymizer:Anonymizer"

[project.optional-dependencies]
dev = [
    "marimo",
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true