[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anonymacy"
version = "0.0.11"
description = "DEPRECATED: anonymacy has been renamed to MaskPipe. Please migrate to the maskpipe package."
readme = "README.md"
authors = [
    { name = "Victor Langemaire", email = "viclang.github@pm.me" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "spacy>=3.8.7",
    "phonenumbers",
    "schwifty"
]

[tool.hatch.build.targets.wheel]
packages = ["src/maskpipe"]

[project.entry-points.spacy_factories]
recognizer = "maskpipe.recognizer:Recognizer"
context_enhancer = "maskpipe.context_enhancer:ContextEnhancer"
conflict_resolver = "maskpipe.conflict_resolver:ConflictResolver"
anonymizer = "maskpipe.anonymizer:Anonymizer"

[dependency-groups]
dev = [
    "marimo",
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true