[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maskpipe"
version = "0.0.13"
description = "MaskPipe is a modular, spaCy-native PII de-identification pipeline. Refine and orchestrate entity results from GLiNER, HuggingFace, or any NER source with context-aware boosting, rule-based validation, and flexible redaction."
readme = "README.md"
authors = [
    { name = "Victor Langemaire", email = "viclang.github@pm.me" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "spacy>=3.8.7",
    "phonenumbers",
    "schwifty"
]

[tool.hatch.build.targets.wheel]
packages = ["src/maskpipe"]

[project.entry-points.spacy_factories]
recognizer = "maskpipe.recognizer:Recognizer"
context_enhancer = "maskpipe.context_enhancer:ContextEnhancer"
conflict_resolver = "maskpipe.conflict_resolver:ConflictResolver"
anonymizer = "maskpipe.anonymizer:Anonymizer"

[dependency-groups]
dev = [
    "marimo",
    "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true