[project]
name = "anonymacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anonymacy" }
]
requires-python = ">=3.12"
dependencies = [
    "gliner-spacy>=0.0.10",
    "spacy>=3.8.7",
]

[tool.hatch.build.targets.wheel]
packages = ["anonymacy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
